<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="20dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q1"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a1"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q2"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a2"
               android:textColor="@color/white"
               android:textSize="18sp"/>


           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q3"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />


           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a3"
               android:textColor="@color/white"
               android:textSize="18sp"/>
           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q1"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a1"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q2"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a2"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q3"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />


           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a3"
               android:textColor="@color/white"
               android:textSize="18sp"/>

       </LinearLayout>
   </ScrollView>
</LinearLayout>
