<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="120dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="JustLight"
        android:textColor="@color/white"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Empower your way"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_gravity="center_horizontal"
        android:text="Lets get started!"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/btn_signin"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="65dp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/textColorPrimary"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/btn_sign_in"
            android:onClick="signInButton"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_toRightOf="@id/btn_signin"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/textColorPrimary"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/btn_sign_up"
            android:onClick="signUpButton"/>

    </RelativeLayout>
</LinearLayout>
